[package]
name = "cdcfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
fastcdc = "3.0.3"
nohash-hasher = "0.2.0"
redis = "0.23.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "offline"] }
wyhash = "0.5.0"

[dev-dependencies]
anyhow = "1.0.71"
bollard = "0.13.0"
dockertest = "0.3.1"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["test-util", "macros"] }
tracing = "0.1.13"
tracing-subscriber = "0.2"

[build-dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.28.2", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
