[package]
name = "cdcfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
bytes = "1.4.0"
fastcdc = "3.0.3"
highway = "1.1.0"
nohash-hasher = "0.2.0"
redis = "0.23.0"
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.43"
twox-hash = "1.6.3"
wyhash = "0.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
dockertest = "0.3.1"
proptest = "1.2.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1.29.1", features = ["test-util", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
with_postgres_ready = "0.1.1"

[build-dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.29.1", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[[bench]]
name = "hashers"
harness = false
